ndla_timeline: Fixes bug with horizontal timeline sticky not working on mobile
For sticky to work, the element must have a limit value, in this case 'top: 0'. Desktop version have 'top: 3.5rem', but the mobile version did not have any.

--- a/src/sass/templates/_ndla_timeline.scss
+++ b/src/sass/templates/_ndla_timeline.scss
@@ -219,6 +219,8 @@ blockquote {
 }
 
 .lo_topBar_timeline {
+  top: 0;
+
   @include breakpoint($mediumx) {
     top: $topBarHeight;
   }
